<resources>
    <string name="app_name">ZeroEnqueue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="order">Order</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_food_list">Food List</string>
    <string name="title_food_stall">Food Stalls</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="Submit">Submit</string>
    <string name="Update">Update</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="recommended">Recommended</string>
    <string name="title_food_detail">Food Details</string>
    <string name="food_image">Food Image</string>
    <string name="rating">Rating</string>
    <string name="food_stall_menu">Stall Menu</string>
    <string name="sign_out">Sign out</string>
    <string name="chicken">Chicken</string>
    <string name="chinese_vegetarian">Chinese Vegetarian</string>
    <string name="eastern_soups">Eastern Soups</string>
    <string name="finger_foods">Finger Foods</string>
    <string name="fish">Fish</string>
    <string name="medifoods">MediFoods Delights</string>
    <string name="pasta">Pasta</string>
    <string name="pizza">Pizza</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="snacks">Snacks</string>
    <string name="western_soups">Western Soups</string>
    <string name="menu_order_summary">View order status</string>
    <string name="chicken_stall">Chicken Stall</string>
    <string name="vegetarian_stall">Vegetarian Stall</string>
    <string name="soup_stall">Soup Stall</string>
    <string name="finger_foods_stall">Finger Foods Stall</string>
    <string name="fish_stall">Fish Stall</string>
    <string name="medifoods_stall">Medifoods</string>
    <string name="western_stall">Western Stall</string>
    <string name="title_comment">Comments</string>
    <string name="size">Size</string>
    <string name="addOns">Add-Ons</string>
    <string name="example">Example</string>
    <string name="filter">Filter</string>
    <string name="food">Food</string>
    <string name="others">Others</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_cart">Cart</string>
    <string name="customer">Customer</string>
    <string name="vendor">Vendor</string>
    <string name="user_type">User Type</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="zeroenqueue">ZeroEnqueue</string>
    <string name="cart">Cart</string>
    <string name="action_clear_cart">Clear cart</string>
    <string name="title_activity_main_vendor">MainVendorActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_orders">Orders</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_stall_overview">Stalls Overview</string>
    <string name="empty_cart">EMPTY CART</string>
    <string name="create_new_food_stall"><u>Create a new one here.</u></string>
    <string name="Confirm">Confirm</string>
    <string name="switch_stall">Switch Stall</string>
    <string name="popular_food">Popular Food</string>
    <string name="action_filter">Filter</string>
    <string name="discounts">Discounts</string>
    <string name="original_price"><strike>$ 1000</strike></string>
    <string name="addSize">Add New Size</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="addAddon">Add Add-On</string>
    <string name="editFoodStallDetails">Edit Food Stall Details</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
</resources>