<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.zeroenqueue.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_food_list"
            app:destination="@id/navigation_food_list" />
        <action
            android:id="@+id/home_to_foodStall"
            app:destination="@id/navigation_foodStall" />
        <action
            android:id="@+id/home_to_categories"
            app:destination="@id/navigation_categories" />
        <action
            android:id="@+id/home_to_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/home_to_order_status"
            app:destination="@id/navigation_order_status" />
    </fragment>

    <fragment
        android:id="@+id/navigation_foodStall"
        android:name="com.example.zeroenqueue.ui.foodStall.FoodStallFragment"
        android:label="@string/title_food_stall"
        tools:layout="@layout/fragment_food_stall" >
        <action
            android:id="@+id/foodStall_to_food_list"
            app:destination="@id/navigation_food_list" />
        <action
            android:id="@+id/foodStall_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.zeroenqueue.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/categories_to_food_list"
            app:destination="@id/navigation_food_list" />
        <action
            android:id="@+id/categories_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order_status"
        android:name="com.example.zeroenqueue.ui.orderStatus.OrderStatusFragment"
        android:label="@string/title_order_status"
        tools:layout="@layout/fragment_order_status" >
        <action
            android:id="@+id/order_status_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.zeroenqueue.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_food_detail"
        android:name="com.example.zeroenqueue.ui.foodDetail.FoodDetailFragment"
        android:label="@string/title_food_detail"
        tools:layout="@layout/fragment_food_detail" >
    </fragment>
    <fragment
        android:id="@+id/navigation_food_list"
        android:name="com.example.zeroenqueue.ui.foodList.FoodListFragment"
        android:label="@string/title_food_list"
        tools:layout="@layout/fragment_food_list" >
        <action
            android:id="@+id/food_list_to_food_detail"
            app:destination="@id/navigation_food_detail" />
        <action
            android:id="@+id/food_list_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.zeroenqueue.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

</navigation>