<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <TextView
            android:id="@+id/editFoodStallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:text="@string/editFoodStallDetails"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/editStallImageCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/transparent_75">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/editStallImage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:layout_alignTop="@+id/linear"
                    android:layout_alignBottom="@+id/linear" />

            <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/ic_add_photo"
                        android:layout_gravity="center"
                        app:tint="@color/white" />

                <TextView
                        android:id="@+id/image_prompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Click here to edit image..."
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>



    </com.google.android.material.card.MaterialCardView>

    <EditText
            android:id="@+id/stallName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

    <EditText
            android:id="@+id/stallPhone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"/>

    <EditText
            android:id="@+id/stallAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"/>

    <EditText
            android:id="@+id/stallDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"/>
</LinearLayout>